--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
+    "koa2-history-api-fallback": "0.0.5",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
     "passport-jwt": "^4.0.0"
