--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,15 +12,28 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^2.2.1",
+    "@types/dotenv": "^4.0.3",
+    "@types/koa": "^2.0.45",
+    "@types/koa-json-error": "^3.1.2",
+    "@types/koa-logger": "^3.1.0",
+    "@types/koa-router": "^7.0.27",
+    "@types/koa-static": "^4.0.0",
+    "@types/koa__cors": "^2.2.2",
+    "@types/mongoose": "^5.0.10",
+    "@types/node": "^9.6.6",
+    "dotenv": "^5.0.1",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
+    "koa-json-error": "^3.1.2",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "koa2-history-api-fallback": "0.0.5",
-    "mongodb": "^3.0.5",
-    "mongoose": "^5.0.12",
-    "passport-jwt": "^4.0.0"
+    "mongoose": "^5.0.15",
+    "node-filelog": "^1.0.15",
+    "passport-jwt": "^4.0.0",
+    "ts-node": "^6.0.0",
+    "typescript": "^2.8.3"
   }
 }
