--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 # mongo
 DB_HOST='localhost'
-DB_PORT=27017
+DB_PORT=27000
 DB_DATABASE='blog'
 DB_USERNAME=
 DB_PASSWORD=
@@ -13,3 +13,5 @@ SUCCESS_DETAILS=1
 # settings
 PAGE_SIZE=10
 CORS='enabled'
+
+MONGO_DEBUG=
