--- a/client/src/tsconfig.app.json
+++ b/client/src/tsconfig.app.json
@@ -5,14 +5,7 @@
     "baseUrl": ".",
     "module": "es2015",
     "target": "es2016",
-    "types": [],
-    "paths": {
-      "@app/*": ["app/*"],
-      "@assets/*": ["assets/*"],
-      "@services/*": ["services/*"],
-      "@types/*": ["types/*"],
-      "@environments/*": ["environments/*"]
-    }
+    "types": []
   },
   "exclude": [
     "test.ts",
