--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "@types/koa__cors": "^2.2.2",
     "@types/mongoose": "^5.0.10",
     "@types/node": "^9.6.6",
+    "codelyzer": "^4.3.0",
     "dotenv": "^5.0.1",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
